# hardwarepilot

./: .gitignore  AGENTS.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/compute/: Dockerfile  pyproject.toml
apps/compute/src/: __init__.py
apps/compute/src/app/: constraints.py  enclosure.py  grpc_server.py  main.py  netlist.py  simulator.py
apps/compute/tests/: test_grpc_integration.py  test_grpc_server.py  test_health.py  test_proto.py
apps/web/: package.json  vitest.config.ts
apps/web/src/actions/: chat.test.ts  chat.ts  circuit.ts  constraint.ts  decision.ts  form.ts  module.ts  project.ts  workspace.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/activity/: activity-feed.test.tsx  activity-feed.tsx
apps/web/src/components/chat/: chat-dock.test.tsx  chat-dock.tsx  thread-selector.test.tsx  thread-selector.tsx
apps/web/src/components/circuit/: ComponentSchematic.tsx
apps/web/src/components/constraints/: ConstraintPanel.tsx
apps/web/src/components/enclosure/: Enclosure3D.tsx
apps/web/src/components/forms/: FormCanvas.tsx  FormWorkspace.tsx  ShapeDescription.tsx  SketchUpload.tsx
apps/web/src/components/modules/: CreateModuleDialog.tsx  ModuleCard.tsx  ModuleGraphCanvas.tsx  ModuleTemplates.tsx
apps/web/src/components/projects/: CreateProjectDialog.tsx  ProjectCard.tsx
apps/web/src/components/review/: ReviewReport.tsx
apps/web/src/components/ui/: dialog.tsx
apps/web/src/components/workspaces/: CreateWorkspaceDialog.tsx  WorkspaceCard.tsx
apps/web/src/lib/: chat-tools.ts  review-engine.ts  risk-enforcement.test.ts  risk-enforcement.ts
apps/web/src/stores/: chat-store.test.ts  chat-store.ts  decision-store.test.ts  decision-store.ts
context/: ai-workflow-rules.md  architecture.md  code-standards.md  progress-tracker.md  project.md  ui-context.md
proto/: compute.proto
(+22 files in other folders)
