[project]
name = "hardwarepilot-compute"
version = "0.0.0"
description = "HardwarePilot compute service — geometry, constraint solving, enclosure generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "grpcio>=1.70",
    "grpcio-tools>=1.70",
    "numpy>=2",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "httpx>=0.28",
]

[tool.fastapi]
entrypoint = "src.app.main:app"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/generated/**" = ["ALL"]
"**/grpc_server.py" = ["N802"]
"**/simulator.py" = ["N806", "E741", "E501"]
"**/constraints.py" = ["E501"]
"**/netlist.py" = ["E501"]
"**/main.py" = ["E501"]
"**/test_grpc_server.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
